volexc/tests/ui/check_undefined_type_struct.out
Error: undefined type `UndefinedType`
   ╭─[check_undefined_type_struct.vol:3:10]
   │
 3 │     bar: UndefinedType
   │          ──────┬──────  
   │                ╰──────── not found
───╯