volexc/tests/ui/check_undefined_type_struct.vol
// Undefined type reference in struct
struct Foo {
    bar: UndefinedType
}
